--- a/src/index.css
+++ b/src/index.css
@@ -5,17 +5,17 @@
 
 @font-face {
 	font-family: 'NanumSquareR';
-	src: url('./fonts/NanumSquareR.otf') format('opentype');
+	src: url('./fonts/NanumSquareR.otf') format('opentype'), url('./fonts/NanumSquareR.ttf') format('truetype');
 }
 
 @font-face {
 	font-family: 'NanumSquareB';
-	src: url('./fonts/NanumSquareB.otf') format('opentype');
+	src: url('./fonts/NanumSquareB.otf') format('opentype'), url('./fonts/NanumSquareB.ttf') format('truetype');
 }
 
 @font-face {
 	font-family: 'NanumSquareEB';
-	src: url('./fonts/NanumSquareEB.otf') format('opentype');
+	src: url('./fonts/NanumSquareEB.otf') format('opentype'), url('./fonts/NanumSquareEB.ttf') format('truetype');
 }
 
 @font-face {
